# teamcity-trial

./: CMakeLists.txt  README.md  install-and-run.ps1
